--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Email: t.i.menon007@gmail.com
 -->
 <html>
     <head>
-        <title>Project</title>
+        <title>Wedding</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
